Change analytics tracker url

--- a/app.html
+++ b/app.html
@@ -17,6 +17,6 @@
 </script>
 <script
   id="counterscale-script"
-  src="https://counterscale.kyrodriguez97.workers.dev/tracker.js"
+  src="https://counterscale.kevyder.workers.dev/tracker.js"
   defer
 ></script>
